--- a/MSX.qsf
+++ b/MSX.qsf
@@ -54,8 +54,8 @@ set_global_assignment -name OPTIMIZATION_TECHNIQUE SPEED
 set_global_assignment -name ECO_OPTIMIZE_TIMING ON
 set_global_assignment -name ALM_REGISTER_PACKING_EFFORT LOW
 set_global_assignment -name ALLOW_SYNCH_CTRL_USAGE OFF
-set_global_assignment -name OPTIMIZATION_MODE "HIGH PERFORMANCE EFFORT"
-set_global_assignment -name SEED 1
+set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
+set_global_assignment -name SEED 3
 
 #============================================================
 # ADC
@@ -420,4 +420,5 @@ set_global_assignment -name VHDL_FILE cpu/T80_Reg.vhd
 set_global_assignment -name VHDL_FILE cpu/T80a.vhd
 set_global_assignment -name VHDL_FILE emsx_top.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE MSX.sv
+set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
