--- a/MSX.qsf
+++ b/MSX.qsf
@@ -356,9 +356,11 @@ set_location_assignment PIN_W20 -to SW[3]
 
 set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:sys/build_id.tcl"
 
+set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
 set_global_assignment -name CDF_FILE jtag.cdf
 set_global_assignment -name QIP_FILE sys/sys.qip
 set_global_assignment -name QSYS_FILE sys/vip.qsys
+set_global_assignment -name VERILOG_FILE scanlines.v
 set_global_assignment -name VHDL_FILE video/vdp.vhd
 set_global_assignment -name VHDL_FILE video/vdp_colordec.vhd
 set_global_assignment -name VHDL_FILE video/vdp_command.vhd
@@ -420,5 +422,4 @@ set_global_assignment -name VHDL_FILE cpu/T80_Reg.vhd
 set_global_assignment -name VHDL_FILE cpu/T80a.vhd
 set_global_assignment -name VHDL_FILE emsx_top.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE MSX.sv
-set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
