--- a/MSX.qsf
+++ b/MSX.qsf
@@ -356,48 +356,48 @@ set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:sys/build_id.tcl"
 
 set_global_assignment -name CDF_FILE jtag.cdf
 set_global_assignment -name QIP_FILE sys/sys.qip
-set_global_assignment -name VHDL_FILE video/vdp.vhd
-set_global_assignment -name VHDL_FILE video/vdp_colordec.vhd
-set_global_assignment -name VHDL_FILE video/vdp_command.vhd
-set_global_assignment -name VHDL_FILE video/vdp_doublebuf.vhd
-set_global_assignment -name VHDL_FILE video/vdp_graphic123m.vhd
-set_global_assignment -name VHDL_FILE video/vdp_graphic4567.vhd
-set_global_assignment -name VHDL_FILE video/vdp_hvcounter.vhd
-set_global_assignment -name VHDL_FILE video/vdp_interrupt.vhd
-set_global_assignment -name VHDL_FILE video/vdp_linebuf.vhd
-set_global_assignment -name VHDL_FILE video/vdp_ntsc_pal.vhd
-set_global_assignment -name VHDL_FILE video/vdp_package.vhd
-set_global_assignment -name VHDL_FILE video/vdp_register.vhd
-set_global_assignment -name VHDL_FILE video/vdp_spinforam.vhd
-set_global_assignment -name VHDL_FILE video/vdp_sprite.vhd
-set_global_assignment -name VHDL_FILE video/vdp_ssg.vhd
-set_global_assignment -name VHDL_FILE video/vdp_text12.vhd
-set_global_assignment -name VHDL_FILE video/vdp_vga.vhd
-set_global_assignment -name VHDL_FILE video/vdp_wait_control.vhd
-set_global_assignment -name VHDL_FILE sound/scc/megaram.vhd
-set_global_assignment -name VHDL_FILE sound/scc/scc_wave.vhd
-set_global_assignment -name VHDL_FILE sound/psg/psg.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_colordec.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_command.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_doublebuf.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_graphic123m.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_graphic4567.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_hvcounter.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_interrupt.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_linebuf.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_ntsc_pal.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_package.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_register.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_spinforam.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_sprite.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_ssg.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_text12.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_vga.vhd
+set_global_assignment -name VHDL_FILE VIDEO/vdp_wait_control.vhd
+set_global_assignment -name VHDL_FILE SOUND/SCC/megaram.vhd
+set_global_assignment -name VHDL_FILE SOUND/SCC/scc_wave.vhd
+set_global_assignment -name VHDL_FILE SOUND/psg/psg.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE SOUND/psg/ym2149.sv
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/AttackTable.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/Controller.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/EnvelopeGenerator.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/EnvelopeMemory.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/FeedbackMemory.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/LinearTable.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/Operator.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/Opll.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/OutputGenerator.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/OutputMemory.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/PhaseGenerator.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/PhaseMemory.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/RegisterMemory.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/SineTable.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/SlotCounter.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/TemporalMixer.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/vm2413.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/VoiceMemory.vhd
-set_global_assignment -name VHDL_FILE sound/opll/vm2413/VoiceRom.vhd
-set_global_assignment -name VHDL_FILE sound/opll/eseopll.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/attacktable.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/controller.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/envelopegenerator.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/envelopememory.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/feedbackmemory.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/lineartable.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/operator.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/opll.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/outputgenerator.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/outputmemory.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/phasegenerator.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/phasememory.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/registermemory.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/sinetable.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/slotcounter.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/temporalmixer.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/vm2413.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/voicememory.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/VM2413/voicerom.vhd
+set_global_assignment -name VHDL_FILE SOUND/OPLL/eseopll.vhd
 set_global_assignment -name VERILOG_FILE peripheral/ps2mouse.v
 set_global_assignment -name VHDL_FILE peripheral/eseps2.vhd
 set_global_assignment -name VHDL_FILE peripheral/iplrom.vhd
@@ -409,12 +409,13 @@ set_global_assignment -name VHDL_FILE peripheral/ram.vhd
 set_global_assignment -name VHDL_FILE peripheral/rtc.vhd
 set_global_assignment -name VHDL_FILE peripheral/swioports.vhd
 set_global_assignment -name VHDL_FILE peripheral/systemtimer.vhd
-set_global_assignment -name VHDL_FILE cpu/T80.vhd
-set_global_assignment -name VHDL_FILE cpu/T80_ALU.vhd
-set_global_assignment -name VHDL_FILE cpu/T80_MCode.vhd
-set_global_assignment -name VHDL_FILE cpu/T80_Pack.vhd
-set_global_assignment -name VHDL_FILE cpu/T80_Reg.vhd
-set_global_assignment -name VHDL_FILE cpu/T80a.vhd
+set_global_assignment -name VHDL_FILE CPU/t80.vhd
+set_global_assignment -name VHDL_FILE CPU/t80_alu.vhd
+set_global_assignment -name VHDL_FILE CPU/t80_mcode.vhd
+set_global_assignment -name VHDL_FILE CPU/t80_pack.vhd
+set_global_assignment -name VHDL_FILE CPU/t80_reg.vhd
+set_global_assignment -name VHDL_FILE CPU/t80a.vhd
 set_global_assignment -name VHDL_FILE emsx_top.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE MSX.sv
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
